<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimage1"
    android:filterTouchesWhenObscured="false"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:clickable="true"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/patext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="0dp"
        android:text="@string/loginpregnancy_assistant"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#5F2CA6"
        android:textSize="45sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="30dp"
           app:cardCornerRadius="30dp"
           app:cardElevation="20dp"
           android:background="@drawable/custom_edittext">
           
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center_horizontal"
               android:padding="24dp">

               <TextView
                   android:id="@+id/loginText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="sans-serif-condensed-medium"
                   android:text="@string/login"
                   android:textAlignment="center"
                   android:textColor="@color/purple"
                   android:textSize="36sp"
                   android:textStyle="bold" />

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:id="@+id/email"
                   android:background="@drawable/backshape1"
                   android:drawableLeft="@drawable/ic_baseline_person_24"
                   android:drawablePadding="8dp"
                   android:hint="@string/loginemail"
                   android:padding="8dp"
                   android:textColor="@color/black"
                   android:textColorHighlight="@color/cardview_dark_background"
                   android:layout_marginTop="40dp"/>

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:id="@+id/password"
                   android:background="@drawable/backshape1"
                   android:drawableLeft="@android:drawable/ic_secure"
                   android:drawablePadding="8dp"
                   android:hint="@string/loginpassword"
                   android:inputType="textPassword"
                   android:padding="8dp"
                   android:textColor="@color/black"
                   android:textColorHighlight="@color/cardview_dark_background"
                   android:layout_marginTop="20dp"/>

               <ProgressBar
                   android:id="@+id/progressbar"
                   android:visibility="gone"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <Button
                   android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:id="@+id/loginbutton"
                   android:text="@string/submit"
                   android:textColor="@color/black"
                   android:layout_marginTop="20dp"
                   android:textSize="18sp"
                   android:background="@drawable/custom_edittext"
                   android:backgroundTint="#D19161D3"
                   app:cornerRadius = "20dp"/>



           </LinearLayout>
       </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signuptext"
        android:padding="2dp"
        android:text="Not yet Registered? SignUp Now"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="-25dp"
        android:background="#75EEEBEF"
        android:clickable="true"/>




</LinearLayout>

