<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".PregnancyInfoFragment">

    <!-- Core Background with color -->
    <TextView
        android:id="@+id/profilebackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profilebackground"/>

    <!-- Top Design Background -->
    <!-- Using an Image to import a design made with Wireframe-->

    <ImageView
        android:id="@+id/topbg"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="-2dp"
        android:background="@drawable/profilebackgroundtop1" />

    <!-- Pregnancy info Page Title -->

    <TextView
        android:id="@+id/PregnancyInfo_Title"
        android:layout_width="393dp"
        android:layout_height="59dp"
        android:layout_alignStart="@+id/topbg"
        android:layout_alignTop="@+id/topbg"
        android:layout_alignEnd="@+id/topbg"
        android:layout_alignBottom="@+id/topbg"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:lines="2"
        android:shadowColor="@color/black"
        android:shadowDx="1.8"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="Pregnancy\nInfo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PI_usersname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PregnancyInfo_Title"
        android:layout_alignStart="@+id/PregnancyInfo_Title"
        android:layout_alignEnd="@+id/PregnancyInfo_Title"
        android:layout_marginTop="-40dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="usersname"
        android:gravity="center"
        />

    <!-- Pregnancy info first Input Frame for user to add pregnancy specific information -->
    <!-- Using an Image to import a design made with Wireframe-->

    <ImageView
        android:id="@+id/input1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/pregnancyinfo_input1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/topbg"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="125dp"
        android:layout_above="@+id/bottomNavigationView"
        />

        <!-- Title for the First input Frame -->

        <TextView
            android:id="@+id/Title_input1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/input1"
            android:layout_alignEnd="@+id/input1"
            android:layout_alignStart="@id/input1"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/health"
            />

        <!-- Line under Title_input1 -->
        <!-- Using ImageView to create a line that sits under Title_input1 -->

        <ImageView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignStart="@+id/Title_input1"
            android:layout_alignEnd="@+id/Title_input1"
            android:layout_below="@+id/Title_input1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/hubline"
            />

    <!-- Text of the First Health Input -->

    <TextView
        android:id="@+id/BloodPressure_text"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_below="@+id/line1"
        android:layout_alignStart="@+id/line1"
        android:layout_alignEnd="@+id/line1"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-2dp"
        android:text="Blood Pressure"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

        <!-- TextInput with a dropdown menu for user to select-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/BloodPressure_input"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/BloodPressure_text"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@+id/BloodPressure_text"
            android:layout_alignEnd="@+id/BloodPressure_text">

            <AutoCompleteTextView
                android:id="@+id/BloodPressure_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:hint="Yes/No"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

    <!-- Text of the Second Health Input -->

    <TextView
        android:id="@+id/Epilepsy_text"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_below="@+id/BloodPressure_input"
        android:layout_alignStart="@+id/line1"
        android:layout_alignEnd="@+id/line1"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-2dp"
        android:text="Epilepsy"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- TextInput with a dropdown menu for user to select-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/Epilepsy_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/Epilepsy_text"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/Epilepsy_text"
        android:layout_alignEnd="@+id/Epilepsy_text">

        <AutoCompleteTextView
            android:id="@+id/Epilepsy_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:hint="Yes/No"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Text of the Third Health Input -->

    <TextView
        android:id="@+id/Obese_text"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_below="@+id/Epilepsy_input"
        android:layout_alignStart="@+id/line1"
        android:layout_alignEnd="@+id/line1"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/obese"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- TextInput with a dropdown menu for user to select-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/Obese_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/Obese_text"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/Obese_text"
        android:layout_alignEnd="@+id/Obese_text">

        <AutoCompleteTextView
            android:id="@+id/Obese_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:hint="Yes/No"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Text of the Third Health Input -->

    <TextView
        android:id="@+id/Diabetes_text"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_below="@+id/Obese_input"
        android:layout_alignStart="@+id/line1"
        android:layout_alignEnd="@+id/line1"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/diabetes"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- TextInput with a dropdown menu for user to select-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/Diabetes_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/Diabetes_text"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/Diabetes_text"
        android:layout_alignEnd="@+id/Diabetes_text">

        <AutoCompleteTextView
            android:id="@+id/Diabetes_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:hint="Yes/No"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>





    <!-- Pregnancy info second Input Frame for user to add pregnancy specific information -->
    <!-- Using an Image to import a design made with Wireframe-->

    <ImageView
        android:id="@+id/input2"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:background="@drawable/pregnancyinfo_input2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="190dp"
        android:layout_below="@id/topbg"
        android:layout_toEndOf="@+id/input1"
        android:layout_above="@id/bottomNavigationView"/>

        <!-- Title for the Second input Frame -->

        <TextView
            android:id="@+id/Title_input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/input2"
            android:layout_alignStart="@+id/input2"
            android:layout_alignEnd="@+id/input2"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/general"
            />

    <!-- Line under Title_input2 -->
    <!-- Using ImageView to create a line that sits under Title_input1 -->

    <ImageView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignStart="@+id/Title_input2"
        android:layout_alignEnd="@+id/Title_input2"
        android:layout_below="@+id/Title_input2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/hubline"
        />

    <!-- Text of the First General Input -->

        <TextView
            android:id="@+id/Date_text"
            android:layout_width="122dp"
            android:layout_height="64dp"
            android:layout_below="@+id/line1"
            android:layout_alignStart="@+id/line2"
            android:layout_alignEnd="@+id/line2"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="-2dp"
            android:text="Start of Pregnancy Date"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    <!-- Edit Text of the First General Input for the user to add information -->

        <EditText
            android:id="@+id/Date_Edit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/Date_text"
            android:layout_alignStart="@id/Date_text"
            android:layout_alignEnd="@id/Date_text"
            android:background="@drawable/backshape4"
            android:layout_marginTop="25dp"
            android:hint="@string/pick_date"
            android:padding="5dp"
            android:textSize="14sp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>


    <!-- Text of the Second General Input -->

        <TextView
            android:id="@+id/Age_text"
            android:layout_width="122dp"
            android:layout_height="64dp"
            android:layout_below="@+id/Date_Edit"
            android:layout_alignStart="@+id/Date_Edit"
            android:layout_alignEnd="@+id/Date_Edit"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="-2dp"
            android:text="Age"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    <!-- Edit Text of the Second General Input for the user to add information -->

        <EditText
            android:id="@+id/Age_Edit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/Age_text"
            android:layout_alignStart="@id/Age_text"
            android:layout_alignEnd="@id/Age_text"
            android:hint="@string/enter_age"
            android:textSize="14sp"
            android:padding="5dp"
            android:background="@drawable/backshape4"
            android:layout_marginTop="25dp" />

    <!-- Text of the Third General Input -->

        <TextView
            android:id="@+id/Weight_text"
            android:layout_width="122dp"
            android:layout_height="64dp"
            android:layout_below="@+id/Age_Edit"
            android:layout_alignStart="@+id/Age_Edit"
            android:layout_alignEnd="@+id/Age_Edit"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="-2dp"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    <!-- Edit Text of the Third General Input for the user to add information -->

        <EditText
            android:id="@+id/Weight_Edit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/Weight_text"
            android:layout_alignStart="@id/Weight_text"
            android:layout_alignEnd="@id/Weight_text"
            android:hint="@string/enter_weight_in_kilos"
            android:textSize="14sp"
            android:padding="5dp"
            android:background="@drawable/backshape4"
            android:layout_marginTop="25dp" />



    <Button
        android:id="@+id/enterbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomNavigationView"
        android:layout_alignStart="@+id/input1"
        android:layout_marginStart="30dp"
        android:layout_alignEnd="@+id/input2"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/custom_edittext"
        android:text="@string/enter_information"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Replica of BottomNavigation Bar for the use of aligning -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>